Add icon before heading

--- a/_posts/2017-03-22-About.md
+++ b/_posts/2017-03-22-About.md
@@ -1,11 +1,7 @@
 ---
-bg: "tag.jpg"
-layout: page
+layout: post
 permalink: /posts/
-title: "Archive"
-crawlertitle: "All articles"
-summary: "Posts about jekyll"
-active: archive
+title: "About"
 ---
 
 {% for tag in site.tags %}
